# caspar

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
data/knowledge_base/: faq.md  policies.md  products.md  troubleshooting.md
scripts/: build_knowledge_base.py  test_architecture.py  test_conversation_flow.py  test_handoff.py  verify_setup.py
src/caspar/agent/: __init__.py  graph.py  nodes.py  persistence.py  state.py
src/caspar/api/: main.py
src/caspar/config/: __init__.py  logging.py  settings.py
src/caspar/handoff/: __init__.py  context.py  notifications.py  queue.py  triggers.py
src/caspar/knowledge/: __init__.py  loader.py  retriever.py
src/caspar/tools/: __init__.py  accounts.py  orders.py  tickets.py
tests/: conftest.py
tests/evaluation/: evaluator.py  test_response_quality.py
tests/integration/: test_conversation_flows.py  test_edge_cases.py  test_intent_classification.py
tests/unit/: test_handoff_triggers.py  test_tools_convenience.py  test_tools_orders.py  test_tools_tickets.py
