# Save as: pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caspar"
version = "0.1.0"
description = "Customer Assistant for Support, Problem-solving, And Resolution"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]